# metatab

./: .gitignore  LICENSE  MANIFEST.in  README.md  irefactor.ipynb  pyproject.toml
.github/workflows/: python-package.yml
_paper/: forecasting.py
_paper/analysis/: corrections.py  plots.py  utils.py
_paper/analysis/boxplot/: types.py
_paper/analysis/mfe_sensitivity/: augmentation.py
_paper/resample_launcher/: constants.py
data/: CastroNaller_2015.txt  Franzosa_2019.txt  Yachida_2019.txt  pred_dataframe.txt
data/CastroNaller_2015_sets/: X_test.txt  X_train.txt  y_test.txt  y_train.txt
fitted_models/: run_models.py  test_constants.py
fitted_models/fitted_models/: my_es_randomized_xgb_classifier.pkl  my_es_xgb_classifier.pkl  my_randomized_es_xgb_classifier.pkl  my_randomized_rf_classifier.pkl  my_randomized_xgb_classifier.pkl  my_rf_classifier.pkl  my_xgb_classifier.pkl
src/_paper/analysis/: check.py  corrections.py  plots.py  utils.py
src/_paper/hp_metalearning/: acquisition_funcs.py  encoding.py  hps_cat_encoding.py  metafeatures.py  random_search.py
src/_paper/resample_launcher/: constants.py  launcher.py
src/_paper/resample_launchers/: __init__.py  constants.py  hard_launcher.py  launchers.py  soft_launcher.py
src/cli/: helper.py  parser.py
src/cli/fit/: fit.py  params.py
src/cli/metalearning/: fit_surrogate.py  fit_surrogate_loo.py  opt_search.py  prepare_metadata.py
src/cli/predict/: params.py  predict.py
src/cli/programs/: fit.py
src/cli/resample/: helper.py  manager_estimator_workflow.py  params.py  resample.py
src/ensemble/: configuration.py  family.py  single.py  single_estimator.py  utils.py
src/estimators/: __init__.py  abstract_estimator.py  base_gbdt.py  catboost.py  constants.py  gbdt.py  lgbm.py  params.py  preprocessing.py  rf.py  searchcv.py  tabpfn.py  types.py  utils.py  xgb.py
src/estimators/core/: __init__.py  abstract_estimator.py  base_meta_estimator.py  configurations.py  meta_ens_base_estimator.py  meta_tune_base_estimator.py  mixin_default_estimator.py  mixin_ensemble_estimator.py  mixin_tuned_estimator.py
src/estimators/estimators/: __init__.py  abstract_estimator.py  base_gbdt.py  catboost.py  lgbm.py  params.py  random_search.py  rf.py  searchcv.py  tabpfn.py  types.py  utils.py  xgb.py
src/estimators/params/: __init__.py  default.py  tune.py  utils.py
src/estimators/preprocessing/: __init__.py  density_selector.py  utils.py
src/estimators/utils/: constants.py  fit.py  gbdt.py  general.py  pick.py  types.py
src/fit/: __init__.py  constants.py  fit.py  fit_helper.py  main.py  main_helper.py  models.py  params.py  random_search.py  utils.py
src/fit/estimators/: __init__.py  abstract_estimator.py  constants.py  random_search.py  utils.py  utils_estimators.py  xgb.py
src/fit/filtering/: percentage.py  sparse_filter.py
src/fit/preprocessing/: __init__.py  density_selector.py
src/hp_search/: config.py  constants.py  cv.py  point_corrector.py  searchcv.py  tabpfn_search_space.py  types.py  utils.py
src/metalearning/: acquisition_funcs.py  encoding.py  feature_sensitivity.py  generator.py  load.py  metadata_evaluator.py  metadata_generator.py  metafeatures.py  sampler.py  surrogate_rf.py  surrogate_worker.py  types.py  utils.py
src/metalearning/database/: utils.py
src/metalearning/encode/: encode.py  transformers.py
src/metalearning/programs/: fit_surrogate.py  prepare_metadata.py
src/metatab/: __init__.py  constants.py  ensemble.py  load.py  main.py  params.py  preprocessing.py  run_model.py  save.py
src/metatab/_paper/: forecasting.py
src/metatab/api/: __init__.py  defaultclassifier.py  ensembleclassifier.py  metaconfig.py  tuneclassifier.py
src/metatab/classifiers/: autogluon.py  catboost.py  extra_trees.py  lgbm.py  random_forest.py  realmlp.py  registry.py  tabm.py  tabpfn.py  xgboost.py
src/metatab/cli/: helper.py  parser.py
src/metatab/data/: castronaller_2015.txt
src/metatab/ensemble/: configuration.py  family.py  single.py  utils.py
src/metatab/estimators/: __init__.py
src/metatab/hp_search/: cv.py  point_corrector.py  searchcv.py
src/metatab/metalearning/: acquisition_funcs.py  constants.py  feature_sensitivity.py  load.py  metadata_evaluator.py  metadata_generator.py  metafeatures.py  sampler.py  surrogate_rf.py  types.py  utils.py
src/metatab/metatab_utils/: device.py  exceptions.py  general.py  package_data.py  types.py
src/metatab/preprocessing/: __init__.py  collect.py  density_selector.py  preprocessing.py  types.py  utils.py
src/metatab/search/: configuration.py  score.py  search.py
src/metatab/temp_search/: configuration.py  cross_validator.py  search.py
src/metatab/utils/: api.py  constants.py  core.py  data_loader.py  exceptions.py  (+5 more)
src/metatab_utils/: data_loader.py  general.py  helper_params.py  helper_programs.py
src/predict/: params.py  predict.py  predict_helper.py  program.py
src/preprocessing/: __init__.py  collect.py  density_selector.py  preprocessing.py  utils.py
src/pretrained_metatab/: main.py  params.py
src/resample/: constants.py  helper.py  manager_estimator_workflow.py  params.py  resample.py  resample_helper.py  save.py
src/runtabpfn/: constants.py  load.py  log.py  main.py  params.py  run_model.py  save.py
src/utils/: data_loader.py  features_aligner.py  general.py  helper_params.py
tests/: .gitattributes  conftest.py  test_classifiers.py  test_cross_validator.py  test_custom_mfe.py  test_density_preprocessor.py  test_density_selection_utils.py  test_density_selector.py  test_device.py  test_encode_metalearning.py  test_ensemble.py  test_ensemble_estimator.py  test_feature_sensitivity.py  test_fit_early_stop.py  test_fit_estimators.py  test_load_pickled_models.py  test_meta_estimators.py  test_metadata_evaluator.py  test_metadata_generator.py  test_metalearning_encoding.py  test_metatune_estimators.py  test_pd_parser.py  test_point_corrector.py  test_prediction_dataframe.py  test_set_params.py  test_surrogate_models.py  test_surrogate_worker.py  test_third_party_classifiers.py  utils_density.py  utils_tests.py
(+128 files in other folders)
