[project]
name = "metatab"
version = "0.1"
requires-python = ">=3.9"
dependencies = [
    "packaging>=25.0,<26.0",
    "numpy>=2.1.3,<3",
    "pandas>=2.2.3,<3",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.33.0",
    "scikit-learn>=1.2.0,<1.7",
    "hyperopt>=0.2.7",
    "pymfe>=0.4.4,<1",
    "torch>=2.6.0,<3",
    "xgboost>=3.0.2,<4",
    "catboost>=1.2.8,<2",
    "lightgbm>=4.6.0,<5",
    "pydantic>=2.12.5,<3",
    "torch>=2.6.0",
    "joblib==1.5.1",  # the exact version assures the deserialization of the surrogate models???
    "tabpfn==2.1.3",  #TODO: update. Our checkpoint download process rely on this specific version for now.
]


[project.optional-dependencies]
dev = [
    "pytest>=8.4.1"
]

paper = [
    "seaborn>=0.13.2,<1",
    "matplotlib>=3.10.3,<4",
    "adjustText>=1.3.0,<2",
    "statannotations>=0.7.2,<1",
    "scipy>=1.16.0,<2"
]


[project.scripts]
metatab-fit = "metatab.cli.programs.fit.fit:main"
metatab-predict = "metatab.cli.programs.predict.predict:main"
metatab-resample = "metatab.cli.programs.resample.resample:main"
metatab-opt-search = "metatab.cli.programs.metalearning.opt_search:main"
metatab-prepare-metadata = "metatab.cli.programs.metalearning.prepare_metadata:main"
metatab-fit-surrogate = "metatab.cli.programs.metalearning.fit_surrogate:main"
metatab-fit-surrogate-loo = "metatab.cli.programs.metalearning.fit_surrogate_loo:main"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
filterwarnings = [
    # filter hyperopt warnings
    'ignore:.*pkg_resources is deprecated as an API.*',
    'ignore:.*datetime.datetime.utcnow\(\) is deprecated and scheduled for removal.*',
    # filter deprecation pkg_resources warnings
    'ignore:.*pkg_resources.*:DeprecationWarning',
    # filter hugging face warning when downloading models on windows
    'ignore:`huggingface_hub` cache-system uses symlinks by default to efficiently store.*'
]
