[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metatab"
version = "0.1.0"
description = "A comprehensive suite of ML classifiers for microbial taxonomic profiles"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Michele Avagliano", email = "avaglianomichele@outlook.it"},
    {name = "Edoardo Pasolli", email = "edoardo.pasolli@unina.it"}
]
keywords = ["metagenomics", "benchmark", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics ",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "packaging>=25.0,<26.0",
    "numpy>=2.1.3,<3",
    "pandas>=2.2.3,<3",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.33.0",
    "scikit-learn>=1.2.0,<1.7",
    "hyperopt>=0.2.7",
    "pymfe==0.4.4", # we rely on a fixed set of metafeatures, so fixed version
    "torch>=2.6.0,<3",
    "xgboost>=3.0.2,<4",
    "catboost>=1.2.8,<2",
    "lightgbm>=4.6.0,<5",
    "pydantic>=2.12.5,<3",
    "torch>=2.6.0",
    "pytabkit>=1.7.3,<2",
    "scikit-bio>=0.7.2,<1",
    "autogluon.tabular[all]>=1.4,<2",
    "autogluon.tabular[tabicl,mitra]>=1.4,<2", # they are not installed automatically with "all"
    "sentencepiece>=0.2,!=0.2.1", # the latest 0.2.1 version gives installation problem on python 3.12
    "joblib==1.5.1",  # the exact version assures the deserialization of the surrogate models???
    "tabpfn==2.1.3",  # TODO: to update with tabpfn. Checkpoint download process rely on this specific version for now
    "setuptools>=68,<81" # this is for hyperopt that depends on pkg_resources which is not anymore blunded in python and dropped with setuptools >=82
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1"
]
paper = [
    "seaborn>=0.13.2,<1",
    "matplotlib>=3.10.3,<4",
    "adjustText>=1.3.0,<2",
    "statannotations>=0.7.2,<1",
    "scipy>=1.16.0,<2",
    "paretoset>=1.2.5"
]

[project.scripts]
metatab-fit = "metatab.cli.programs.fit:main"
metatab-predict = "metatab.cli.programs.predict:main"
metatab-resample = "metatab.cli.programs.resample.resample:main"
metatab-get-example-data-path = "metatab.cli.programs.get_example_data_path:main"
metatab-opt-search = "metatab.cli.programs.metalearning.opt_search:main"
metatab-prepare-metadata = "metatab.cli.programs.metalearning.prepare_metadata:main"
metatab-fit-surrogate = "metatab.cli.programs.metalearning.fit_surrogate:main"
metatab-fit-surrogate-loo = "metatab.cli.programs.metalearning.fit_surrogate_loo:main"
metatab-mfe-sensitivity = "metatab._paper.analysis.mfe_sensitivity.permutation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
metatab = ["data/*.txt"]

[project.urls]
Homepage = "https://github.com/mike-bioinf/metatab"
Repository = "https://github.com/mike-bioinf/metatab"
Issues = "https://github.com/mike-bioinf/metatab/issues"

[tool.pytest.ini_options]
filterwarnings = [
    # filter hyperopt warnings
    'ignore:.*pkg_resources is deprecated as an API.*',
    'ignore:.*datetime.datetime.utcnow\(\) is deprecated and scheduled for removal.*',
    # filter deprecation pkg_resources warnings
    'ignore:.*pkg_resources.*:DeprecationWarning',
    # filter hugging face warning when downloading models on windows
    'ignore:`huggingface_hub` cache-system uses symlinks by default to efficiently store.*',
    # filter autogluon fastai warning
    'ignore: numpy.core is deprecated and has been renamed to numpy._core.*'
]